# technetium

./: config.py  playstoredata.csv  pyproject.toml  run.py  test.csv
data/: outliers.csv
data/free_apps/: 2.csv  3.csv  4.csv  5.csv  UNRATED.csv
data/paid_apps/: 1.csv  2.csv  3.csv  4.csv  5.csv  UNRATED.csv
src/technetium/: __main__.py  app.py  login.db  models.py
src/technetium/auth/: models.py  views.py
src/technetium/auth/templates/: login.html
src/technetium/templates/: data.html  index.html
tests/: test_technetium.py
