[tool.poetry]
name = "technetium"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.6.0"
Flask-Dance = {extras = ["sqla"], version = "^6.0.0"}
blinker = "^1.4"
Flask-Cors = "^3.0.10"
Werkzeug = "^2.1.1"
pydantic = "^1.9.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
